--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "node-telegram-bot-api": "^0.54.0",
     "nodemon": "^2.0.13",
     "pg": "^8.7.1",
