--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
+    "morgan": "^1.10.0",
     "node-telegram-bot-api": "^0.54.0",
     "nodemon": "^2.0.13",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.7.0",
     "uuidv4": "^6.2.12"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13"
   }
 }
